@@ -9,7 +9,7 @@ measure code coverage of Python program execution
 :Author: Ned Batchelder <ned@nedbatchelder.com>
 :Author: |author|
 :Date: 2014-09-27
-:Copyright: BSD license, attribution and disclaimer required.
+:Copyright: Apache 2.0 license, attribution and disclaimer required.
 :Manual section: 1
 :Manual group: Coverage
 
